change css to fix margin and overflow

--- a/ph/mapofecommerce/embed/assets/css/main2.css
+++ b/ph/mapofecommerce/embed/assets/css/main2.css
@@ -255,6 +255,7 @@ ul li a{
 
 .infographic-data-wrapper .row .col, .header .col{
 	display: table-cell;
+	overflow: hidden;
 }
 
 .quarter-label.y-active,
